Restore .read() to use a simple byte array and not an inputStream